src/App.css
.App {
  text-align: center;
}

.App-logo {
  height: 80px;
}
.App-logo.spin {
  animation: App-logo-spin infinite 20s linear;
}
.App-header {
  background-color: #222;
  height: 180px;
  padding: 20px;
  color: white;
}

.App-intro {
  font-size: large;
}

@keyframes App-logo-spin {
  from { transform: rotate(0deg); }
  to { transform: rotate(360deg); }
}

